# asha-health

./: .gitignore  README.md  run_app.sh
backend/: .env.example  README.md  README_STREAMING.md  __init__.py  pyproject.toml  run_websocket_test.sh  test_deepgram_connection.py  test_stream.py
backend/app/: __init__.py  config.py  database.py  main.py  models.py  schemas.py  soap_service.py
backend/app/notification/: README.md  __init__.py  service.py  sse_manager.py
backend/app/routers/: __init__.py  notifications.py  sessions.py  soap.py  transcription.py  websocket.py
backend/app/soap_processor/: __init__.py  base.py  default_processor.py  factory.py  mock_processor.py
backend/app/store/: __init__.py  dispatcher.py  storage.py
backend/app/transcription/: __init__.py  base.py  deepgram.py  deepgram_streaming.py  factory.py  whisper.py
backend/app/utils/: logger.py  migrate_db.py
backend/tests/: README.md  __init__.py  chunk_and_test.py  run_all_tests.py  test_api_endpoint.py  test_client.py  test_store.py  test_websocket_transcription.py
frontend/: README.md  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/audio/: route.ts
frontend/src/app/api/sse-proxy/[session_id]/: route.ts
frontend/src/app/create/: page.tsx
frontend/src/app/sessions/: page.tsx
frontend/src/app/sessions/[id]/: page.tsx
frontend/src/components/: Navigation.tsx
frontend/src/context/: NotificationContext.tsx
frontend/src/utils/: audio.ts  microphone.ts  websocket.ts
